@@ -187,12 +187,12 @@ public class BGBlocks {
 
     public static  final Supplier<Block> MONTSECHIA = registerBlock("montsechia", () -> new FlowerBlock(MobEffects.UNLUCK, 12.0F,BlockBehaviour.Properties.of().mapColor(MapColor.PLANT)
             .lightLevel((state) -> {
-                return 15;
+                return 12;
             }).noCollission().instabreak().sound(SoundType.GRASS).offsetType(BlockBehaviour.OffsetType.XZ).pushReaction(PushReaction.DESTROY)));
 
     public static  final Supplier<Block> POTTED_MONTSECHIA = registerBlockWithoutBlockItem("potted_montsechia", () -> createFlowerPotBlock(MONTSECHIA.get()));
     public static  final Supplier<Block> SAGARIA = registerBlock("sagaria", () -> new FlowerBlock(MobEffects.LUCK, 12.0F,BlockBehaviour.Properties.of().mapColor(MapColor.PLANT).noCollission().lightLevel((state) -> {
-     return 15;
+     return 12;
     }).instabreak().sound(SoundType.GRASS).offsetType(BlockBehaviour.OffsetType.XZ).pushReaction(PushReaction.DESTROY)));
 
     public static  final Supplier<Block> POTTED_SAGARIA = registerBlockWithoutBlockItem("potted_sagaria", () -> createFlowerPotBlock(SAGARIA.get()));
@@ -205,7 +205,7 @@ public class BGBlocks {
 
 
     public static  final Supplier<Block> RAFFLESIA = registerBlock("rafflesia", () -> new RafflesiaBlock(BlockBehaviour.Properties.of().mapColor(MapColor.CRIMSON_STEM).instabreak().noCollission().lightLevel((state) -> {
-     return 15;
+     return 12;
     }).sound(SoundType.SPORE_BLOSSOM).pushReaction(PushReaction.DESTROY)));
 
     public static final Supplier<Block> GOURD_VINE = registerBlockWithoutBlockItem("gourd_vine", () -> new GourdVineBlock(BlockBehaviour.Properties.of().replaceable().noCollission()
