@@ -56,7 +56,7 @@
 
 # The Whiskbill
 * A new passive mob found only in the Underhang.
-* Will seek out low-growing Glow Gourds and devour them, spitting out the Seeds!
+* Will seek out Glow Gourds and devour them, spitting out the Seeds!
 * Will retreat from nearby players and poison players that hurt them!
 * Temporarily are using Sniffer sounds, but unique sounds are planned for 1.3.1!
 * Can be bred with Gourd Slices!
@@ -76,6 +76,7 @@
 * Pests now consume crops 20% more.
 * Mossy Claystone now boosts Sniffer eggs hatch rates.
 * Chantrelle now has a light level of six.
+* Montsechia texture has been changed!
 * Removed Umber.
 * Removed Umber Bricks.
 
@@ -90,7 +91,7 @@
 * Fixed numerous tags from being broken.
 * Fixed numerous broken stonecutter recipes for Byslate and Bystone (All types).
 * Fixed multiple Bygone mobs having "lag" between movements.
-
+* Fixed Underhang Vines popping out Glowstone when right-clicked.
 
 
 ## **Updates in 1.2.3**
